STABLE RELEASE 0.8.0 : Minor bugfixes

# Now use permanent Teredo prefix 2001:0:: default instead of 3ffe:831f::.
# (Linux-only) Fix setting of /proc/sys/net/ipv6/conf/<iface>/* entries.
# Fix some spelling errors in documentation.
# Many compilation fixes for FreeBSD 6.0 (also backported in v0.7.2).
# Fix --enable-debug configure option (also in v0.7.2).

=============================================================================
BETA RELEASE 0.7.1 : Major features enhancement

# One hundred time more scalable peers list: Miredo should now be able to
  handle a few hundreds of thousands of peers simultaneously while it would
  hardly hundle one thousand previously. That is done with Judy dynamic
  arrays (an external very fast LGPL library for hash tables). If Judy is
  not available, the old naive and not scalable linked list algorithm will
  still be used.
# Basic working garbage collector for peers list.
# Better Echo Requests and Teredo bubbles timings as regards draft 05.
# Add --enable-debug configure option. Without this, debug stuff will no
  longer be included.
# Reset peers list when Teredo client status changes (bug fix)

=============================================================================
BETA RELEASE 0.7.0 : Minor features enhancement, security/bugs fixes

# Make efforts to retry sending UDP packets in case of ICMP failure.
# Partially rewritten IPv6 tunneling driver; now supports Darwin (Mac OS X).
# Emit ICMPv6 Address unreachable error packets when a destination cannot
  be reached via Teredo tunneling.
# Force 2-seconds delay between multiple Echo Requests and Teredo bubbles.
# Use HMAC-MD5 for Echo Requests "nonce", rather than kernel entropy pool
  (heavily reduce kernel entropy pool usage).
# Fix Teredo client maintenance in case of system clock drift (could be
  caused by SIGSTOP, APM/ACPI/software suspend, debugger, or system load).
# Define Linux kernel 2.6.9 as the minimum supported Linux kernel version.