@@ -36,11 +36,11 @@ the website at : http://www.simphalempin.com/dev/miredo/
 What is Miredo?
 ================
 
-  Miredo is an Unix daemon program which implements the "Teredo:
-Tunneling IPv6 over UDP through NATs" Internet draft specification.
-It can provide either client or relay functionnality. A separate
-program, miredo-server is also included in the package; it consists of
-a Teredo server.
+  Miredo is an Unix daemon program which mostly implements the
+"Teredo: Tunneling IPv6 over UDP through NATs" Internet proposed
+standard (RFC 4380). It can provide either client or relay
+functionnality. A separate program, miredo-server is also included in
+the package; it consists of a Teredo server.
 
   Miredo can be used to provide IPv6 connectivity to users behind NAT
 which do not support IPv6, and not even proto-41 forwarding. For this
