@@ -21,13 +21,10 @@ miredo-server \- Teredo server for Unix
 .RB "[" "server_name" "]"
 
 .SH DESCRIPTON
-.B Miredo
-is an Unix daemon program which implements the "Teredo:
-Tunneling IPv6 over UDP through NATs" Internet draft specification.
-It can provide both server and relay functionnality.
-
-.BR "miredo-server" " is the Teredo server implementation of "
-.BR "Miredo" "."
+.B Miredo-server
+is an Unix daemon program which implements a Teredo server as specified
+by the "Teredo: Tunneling IPv6 over UDP through NATs" Internet proposed
+standard (RFC 4380).
 
 A Teredo server is required for Teredo clients to setup their IPv6
 connectivity through Teredo. A Teredo server must have two global
