@@ -22,9 +22,10 @@ miredo \- Teredo IPv6 tunneling for Unix
 
 .SH DESCRIPTON
 .B Miredo
-is an Unix daemon program which implements the "Teredo:
-Tunneling IPv6 over UDP through NATs" Internet draft specification.
-It can provide either Teredo client or Teredo relay functionnality.
+is an Unix daemon program providing a Teredo tunnel service compatible
+with the "Teredo: Tunneling IPv6 over UDP through NATs" Internet
+proposed standard (RFC 4380). It can provide either Teredo client or
+Teredo relay functionnality.
 
 It can be used to provide IPv6 connectivity to users behind NAT which
 do not support IPv6, and not even proto-41 forwarding. For this to
@@ -42,10 +43,6 @@ clients to setup their IPv6 connectivity through Teredo. A Teredo
 server must have to global static subsequent IPv4 addresses. It
 receives packets from Teredo clients and Teredo relays on UDP port
 3544.
-
-This version of the program is designed according to
-.IR "draft-huitema-v6ops-teredo-05.txt" ", although it might not be"
-entirely conformant to that version of the Teredo specification.
 
 .SH OPTIONS
 
@@ -79,10 +76,6 @@ file. It is ignored if RelayType is not set to "client" (see miredo.conf).
 
 .\".SH DIAGNOSTICS
 .\".SH BUGS
-.RB "The Internet draft specification for " "Teredo" " has not yet"
-been validated. As such it is subject to change and miredo might not
-work correctly with other implementations.
-
 .SH SECURITY
 .B Miredo
 requires
